--- a/pages/goodies.html
+++ b/pages/goodies.html
@@ -20,12 +20,16 @@
 
 	<link rel="stylesheet" href="../style.css">
 
-	<ul class="navbar">
-			<li class="left"><a class="mylogo"><img src="../resources/logo.png" alt="VOID" height="20" class="logo" onclick="window.location.href='http://www.decodedvoid.com'"></a></li>
+	<div class="navbar">
+		<a class="mylogo"><img src="../resources/logo.png" alt="VOID" height="30" class="logo" onclick="window.location.href='http://www.decodedvoid.com'"></a>
+		<input class="menu-btn" type="checkbox" id="menu-btn" />
+		<label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+		<ul class="menu">
 			<li class="right"><a href="../pages/contactme.html">Contact Me</a></li>
 			<li class="right"><a href="../pages/about.html">About</a></li>   
 			<li class="right"><a href="../pages/goodies.html">Goodies</a></li>
-	</ul>
+		</ul>
+	</div>
 </header>
 
 <body>
@@ -41,11 +45,9 @@
 	<h1>
 		<br>
 		Gorgibulous 
-	</h1>
-	<h3>
 		<br>
 		(Made or inspired by Geo)
-	</h3>
+	</h1>
 		<iframe src="https://drive.google.com/embeddedfolderview?id=1jAQSr4d06boSZn8owvPe1aRZ_4eHHHMy#grid" style="width:100%; height:600px; border:0;"></iframe>
 </body>
 
