Mobile bar colors

--- a/pages/goodies.html
+++ b/pages/goodies.html
@@ -3,6 +3,10 @@
 
 <header>
 	<meta charset="utf-8">
+	<!-- Bar Colors -->
+	<meta name="theme-color" content="#8E3C8E">
+	<meta name="msapplication-navbutton-color" content="#8E3C8E">
+	<meta name="apple-mobile-web-app-status-bar-style" content="#8E3C8E">
 
 	<title>DeCoded_Void - Goodies</title>
 	
