--- a/index.html
+++ b/index.html
@@ -51,13 +51,15 @@
 	</h1>
 	<h4>
 		<br>
-		Look, I know how you got here, you saw my domain and thought to put it in the url and somehow ended up here.
+		Look, I know how you got here, you either saw my domain or decided to poke around some of my services.
 		<br>
 		Not sure what your goal here was, so um hi. This was a website created in like an hour for this domain.
 		<br>
 		I bought this domain with the intent to create a bunch of subdomains for gaming servers and url shorteners.
 		<br>
-		Best way to reach me is through discord.
+		Though at this point, it can also be a place to display some content of my choosing as well as other goodies.
+		<br>
+		Best way to reach me is through discord which is found in the Contact Me page.
 		<br>
 	</h4>
 	
