--- a/pages/about.html
+++ b/pages/about.html
@@ -3,6 +3,11 @@
 
 <header>
 	<meta charset="utf-8">
+	<meta property="og:title" content="DeCoded_Void's Website" />
+	<meta property="og:description" content="This is Void's website, possibly the most useless place on the internet.
+
+						Best way to reach me is on discord: Void#1337"/>
+	<meta property="og:image" content="https://decodedvoid.com/resources/index/Menacing.png" />
 	<!-- Bar Colors -->
 	<meta name="theme-color" content="#8E3C8E">
 	<meta name="msapplication-navbutton-color" content="#8E3C8E">
