--- a/pages/goodies.html
+++ b/pages/goodies.html
@@ -55,7 +55,7 @@ Best way to reach me is on discord: Void#1337"/>
 		<br>
 		Gorgibulous 
 		<br>
-		(Made or inspired by Geo)
+		(Made or inspired by Tomatori)
 	</h1>
 		<iframe src="https://drive.google.com/embeddedfolderview?id=1jAQSr4d06boSZn8owvPe1aRZ_4eHHHMy#grid" style="width:100%; height:600px; border:0;"></iframe>
 </body>
