--- a/pages/about.html
+++ b/pages/about.html
@@ -69,9 +69,9 @@ Best way to reach me is on discord: Void#1337"/>
 		<input class="menu-btn" type="checkbox" id="menu-btn" />
 		<label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
 		<ul class="menu">
-			<li class="right"><a href="../pages/contactme.html">Contact Me</a></li>
-			<li class="right"><a href="../pages/about.html">About</a></li>   
-			<li class="right"><a href="../pages/goodies.html">Goodies</a></li>
+			<li class="right"><a href="../pages/contactme">Contact Me</a></li>
+			<li class="right"><a href="../pages/about">About</a></li>   
+			<li class="right"><a href="../pages/goodies">Goodies</a></li>
 		</ul>
 	</div>
 </header>
