--- a/pages/contactme.html
+++ b/pages/contactme.html
@@ -6,7 +6,7 @@
 	<meta property="og:title" content="DeCoded_Void's Website" />
 	<meta property="og:description" content="This is Void's website, possibly the most useless place on the internet.
 
-Best way to reach me is on discord: Void#1337"/>
+Best way to reach me is on discord: de.coded"/>
 	<meta property="og:image" content="https://decodedvoid.com/resources/index/Menacing.png" />
 	<!-- Bar Colors -->
 	<meta name="theme-color" content="#8E3C8E">
@@ -56,7 +56,7 @@ Best way to reach me is on discord: Void#1337"/>
 	</h2>
 	<h3>
 		<br>
-		Discord: <a style="text-decoration: none" href="http://discord.decodedvoid.com" >Void#1337</a>
+		Discord: <a style="text-decoration: none" href="http://discord.decodedvoid.com" >de.coded</a>
 		<br>
 		Steam: <a style="text-decoration: none" href="https://steamcommunity.com/id/DeCoded_Void">DeCoded_Void</a>
 		<br>
