--- a/pages/about.html
+++ b/pages/about.html
@@ -86,7 +86,7 @@ Best way to reach me is on discord: de.coded"/>
 				About Me
 			</h1>
 			<h3>
-				Hello, I am DeCoded_Void aka Void but I may go by different aliases. I am aiming to be a computer engineer in the future, but as you can see from here, I am no UI designer or specialize in web development. In my free time, I enjoy playing indie titles, platormers, looter shooters, and any other things that may interest me. I also create programs to help automate things for other users, make things easier, or just for plain entertainment. If you would like to contact me or join my discord community, you do so in the "Contact Me" tab above.
+				Hello, I am DeCoded_Void aka Void. I am a Computer Engineer with a Masters Degree and minor in Cybersecurity, but as you can see from here, I am no UI designer or specialize in web development. In my free time, I enjoy playing indie titles, platormers, looter shooters, and any other things that may interest me. I also create programs to help automate things for other users, make things easier, or just for plain entertainment. If you would like to contact me, you do so in the "Contact Me" tab above.
 			</h3>
 		</div>
 	</div>
