--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ Best way to reach me is on discord: de.coded"/>
 			<a href="./pages/about">About Me</a>
 			<a href="./pages/goodies">Goodies</a>
 			<a href="./pages/contactme">Contact Me</a>
-			<a href="https://www.patreon.com/DeCoded_Void">Patreon</a>
+			<a href="https://www.etsy.com/shop/VoidNYC">Etsy Shop</a>
 		</div>
 	</h4>
 	<p style="text-align:center;">
